--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <ul class="list-group">
                             <li class="list-group">
                                 <label for="date"></label>
-                                <input type="text" placeholder="01/10/2010" id="datetime" />
+                                <input type="text" placeholder="e.g. 1/10/2010" id="datetime" />
                             </li>
                             <li class="list-group-item">
                                 <button id="filter-btn" type="button" class="btn btn-default">Filter Table</button>
@@ -74,5 +74,8 @@
             </div>
         </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
+    <script src="static/js/data.js"></script>
+    <script src="static/js/app.js"></script>
 </body>
 </html>
